samples/_failures_safe/1761792579_53378c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a473d1c9.c: In function ‘main’:
./samples/SAFE/__tmp_a473d1c9.c:173:5: error: expected expression at end of input
  173 |     if (fgets(input, sizeof(input), stdin) == NULL)
      |     ^~
./samples/SAFE/__tmp_a473d1c9.c:173:5: error: expected declaration or statement at end of input
